@@ -1,3 +1,14 @@
+2009-06-16  Gavin Barraclough  <barraclough@apple.com>
+
+        Reviewed by Oliver hunt.
+
+        Temporarily partially disable r44492, since this is causing some problems on internal builds.
+
+        * jit/JITOpcodes.cpp:
+        (JSC::JIT::emit_op_throw):
+        * jit/JITStubs.cpp:
+        (JSC::JITStubs::DEFINE_STUB_FUNCTION):
+
 2009-06-16  Sam Weinig  <sam@webkit.org>
 
         Fix windows build.
